app-deploy/ingress/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: yourapp-ingress
  # namespace: default 
  # when using gitops, namespace shouldn't be mentioned in the ingress yaml file
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: eab38edc-4193-4c4c-aad8-56d3de4bdd78.k8s.civo.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          serviceName: superservice
          servicePort: 80
